crates/tui/tests/storybook/snapshots/app_transcript_view_state::thinking_block_states.collapsed.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
│ Inspecting the renderer
│ … 6 lines collapsed …

│ thinking
│ … 6 lines collapsed …









─ ✿ working… ───────────────────────────────────────────

────────────────────────────────────────────────────────
 ○ normal                                       1:1 100%
