crates/tui/tests/storybook/snapshots/app_transcript_view_state::thinking_block_states.expanded.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
│ Read the transcript model first.
│ Check the Lua defaults next.
│ Compare the rendered rows.
│ Update the stories last.
│ Run the snapshot tests.
│ Review the final diff.

│ Read the transcript model first.
│ Check the Lua defaults next.
│ Compare the rendered rows.
│ Update the stories last.
│ Run the snapshot tests.
│ Review the final diff.

─ ✿ working… ───────────────────────────────────────────

────────────────────────────────────────────────────────
 ○ normal                                       1:1 100%
