crates/tui/tests/storybook/snapshots/app_transcript_view_state::thinking_block_states.peek.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
│ Inspecting the renderer
│ … 3 lines omitted …
│ Update the stories last.
│ Run the snapshot tests.
│ Review the final diff.

│ Read the transcript model first.
│ … 2 lines omitted …
│ Update the stories last.
│ Run the snapshot tests.
│ Review the final diff.



─ ✿ working… ───────────────────────────────────────────

────────────────────────────────────────────────────────
 ○ normal                                       1:1 100%
