crates/tui/tests/storybook/snapshots/app_transcript_view_state::thinking_block_states.peek.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 56 18
  0   2  23 attrs=bold|dim
  1   0  21 attrs=dim
  2   2  24 attrs=dim
  3   2  23 attrs=dim
  4   2  22 attrs=dim
  6   2  32 attrs=dim
  7   0  21 attrs=dim
  8   2  24 attrs=dim
  9   2  23 attrs=dim
 10   2  22 attrs=dim
 14   0   1 fg=AnsiValue(237)
 14   1   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
 14   2   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
 14   3   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
 14   4   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
 14   5   1 fg=Rgb { r: 140, g: 140, b: 140 } attrs=bold
 14   6   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
 14   7   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
 14   8   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
 14   9   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
 14  10   1 fg=Rgb { r: 220, g: 220, b: 220 } attrs=bold
 14  11   1 fg=Rgb { r: 238, g: 238, b: 238 } attrs=bold
 14  13  43 fg=AnsiValue(237)
 15   1   1 fg=Black bg=White
 16   0  56 fg=AnsiValue(237)
 17   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 17  10  38 bg=AnsiValue(233)
 17  48   8 fg=AnsiValue(244) bg=AnsiValue(233)
