crates/tui/tests/storybook/snapshots/app_transcript_view_state::tools_collapsed_errors.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
* read_file missing.rs
  No such file or directory (os error 2)

* edit_file src/lib.rs
  old_string not found in src/lib.rs

* grep [unterminated in src
  regex parse error:
      [unterminated
      ^
  error: unclosed character class



─ ✿ working… ─────────────────────────────────────────────────────────────────────────

──────────────────────────────────────────────────────────────────────────────────────
 ○ normal                                                                     1:1 100%
