crates/tui/tests/storybook/snapshots/app_transcript_view_state::tools_collapsed_summaries.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
* load_skill customize
  3 lines

* write_file src/new.rs
  wrote 3 lines

* edit_file src/lib.rs
  1 removed, 1 added

* edit_notebook analysis.ipynb
  replaced cell, 1 lines



─ ✿ working… ─────────────────────────────────────────────────────────────────────────

──────────────────────────────────────────────────────────────────────────────────────
 ○ normal                                                                     1:1 100%
