crates/tui/tests/storybook/snapshots/app_transcript_view_state::tools_collapsed_summaries.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 86 18
  0   0   1 fg=AnsiValue(77)
  0   1  11 attrs=dim
  1   2   7 attrs=dim
  3   0   1 fg=AnsiValue(77)
  3   1  11 attrs=dim
  4   2  13 attrs=dim
  6   0   1 fg=AnsiValue(77)
  6   1  10 attrs=dim
  7   2  18 attrs=dim
  9   0   1 fg=AnsiValue(77)
  9   1  14 attrs=dim
 10   2  22 attrs=dim
 14   0   1 fg=AnsiValue(237)
 14   1   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
 14   2   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
 14   3   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
 14   4   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
 14   5   1 fg=Rgb { r: 140, g: 140, b: 140 } attrs=bold
 14   6   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
 14   7   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
 14   8   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
 14   9   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
 14  10   1 fg=Rgb { r: 220, g: 220, b: 220 } attrs=bold
 14  11   1 fg=Rgb { r: 238, g: 238, b: 238 } attrs=bold
 14  13  73 fg=AnsiValue(237)
 15   1   1 fg=Black bg=White
 16   0  86 fg=AnsiValue(237)
 17   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 17  10  68 bg=AnsiValue(233)
 17  78   8 fg=AnsiValue(244) bg=AnsiValue(233)
